--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@ body,td,th {
 		<td height="160" colspan="3" valign="top">
 		<!-- MSCellType="ContentHead" -->
 		
-<p align="center"><font face="Calibri Light"><font size="6" >Zishuo Zhao</font></font><font color="8080FF"> </font></p>
+<p align="center"><font face="Calibri Light"><font size="6" >Zishuo Zhao</font></font><font color="8080FF"> </font> </p>
 <div align="center">
   <p><font color="#8080FF" >PhD Candidate, Industrial Engineering, University of Illinois Urbana-Champaign
   </font></p>
-  <p><span style="text-indent: 40px">Expected graduation: TBA (2026-2028)&nbsp; &nbsp;</span></p>
+  <p><span style="text-indent: 40px">Expected graduation: TBA (2026-2028)&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
 </div></td>
 	</tr>
 
@@ -35,19 +35,15 @@ body,td,th {
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou. </p>
         <p align="left" style="text-indent: 40px">I am&nbsp; currently visiting MIT and working with David Simchi-Levi from Fall 2023 to Summer 2024.</p>
-        <p align="left" style="text-indent: 40px">Office: E18 440F&nbsp;</p>
-        <p align="left" style="text-indent: 40px">My <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font></p>
-
-
-
-	  <p style="text-indent: 40px">&nbsp;</p></td>
+        <p align="left" style="text-indent: 40px">Office: E18 440F&nbsp;	  </p>
+      <p style="text-indent: 40px">&nbsp;</p></td>
 		<td width="31%" colspan="2" valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Research Interest</strong></font></i> </p>
 		<p align="left" style="text-indent: 40px">
   <font >I currently do research on <font color="#0000FF"> Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) Operations Research, EconCS and Security. </p>
-		<p align="left" style="text-indent: 40px">Particularly, my recent research  focus is on the design of reliable and sustainable platforms  for digital economy and AI, with a special interest in mechanism design for blockchain and decentralized AI platforms. </p>
+		<p align="left" style="text-indent: 40px">Particularly, I have a special interest in mechanism design for blockchain and decentralized AI, and my recent research focus is on the design of <strong>incentive-secure decentralized trustworthy AI</strong> platforms for the initiative of <strong>AI safety</strong>. </p>
 		<p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p>
 		<p align="left" style="text-indent: 40px">During the visit at MIT, I am working on data-driven
 		  mechanism design based on statistical/online learning.  </p>
@@ -91,8 +87,8 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><strong>Incentive-Aware Dynamic Auction for Budgeted Bidders</strong></p>
 <p align="left" style="text-indent: 40px">David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou*</p>
 <p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><strong>Decentralized Verification Game</strong></p>
-	<p align="left" style="text-indent: 40px"><em>(an interest-driven project, collaborators TBA)</em></p>
+	<p align="left" style="text-indent: 40px"><strong>(Peer Prediction for) Decentralized Verification Game</strong></p>
+	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
 <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
