--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@ body,td,th {
   <p><font color="#8080FF" >PhD Candidate, Industrial Engineering, University of Illinois Urbana-Champaign
   </font></p>
   <p><span style="text-indent: 40px">Expected graduation: TBA (2026-2028)&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
-</div></td>
+  
+</div>
+		<p><font>[Note] </font></p>
+		<p><em>I am currently enjoying my research projects and am hopeful about my long-term pursuit in academia. However, I am fully aware of the extremely competitive environment in the academic job market and the uncertainties regarding my opportunities post-graduation. As such, I anticipate extending my graduation timeline to continue my long-term research projects and enhance my publication record, thereby giving myself a non-negligible chance of obtaining a faculty or postdoc position.</em></p>
+		<p><em>While I recognize the possibility that I may eventually need to seek a job in industry, my passion for academic research leads me to prioritize this path for now. Therefore, I am not actively seeking industrial positions at this moment. Nonetheless, I remain open to discussions with professionals in both academia and industry to gain insights and information relevant to my career aspirations.</em></p></td>
 	</tr>
 
 	<tr>
@@ -71,6 +75,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><strong>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation</strong></p>
 	<p align="left" style="text-indent: 40px"> Xi Chen*, David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
+	<p align="left" style="text-indent: 40px">Major Revision in <font color="#0000FF">Operations Research</font></p>
 	<p align="left" style="text-indent: 40px"><font color="#0000FF">Best Paper Award, </font><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font></p>
 <p align="left" style="text-indent: 40px"> <font >CESC 2022</font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
