--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@ body,td,th {
 </div>
 		<p><font>[Note] </font></p>
 		<p><em>I am currently enjoying my research projects and am hopeful about my long-term pursuit in academia. However, I am fully aware of the extremely competitive environment in the academic job market and the uncertainties regarding my opportunities post-graduation. As such, I anticipate extending my graduation timeline to continue my long-term research projects and enhance my publication record, thereby giving myself a non-negligible chance of obtaining a faculty or postdoc position.</em></p>
-		<p><em>While I recognize the possibility that I may eventually need to seek a job in industry, my passion for academic research leads me to prioritize this path for now. Therefore, I am not actively seeking industrial positions at this moment. Nonetheless, I remain open to discussions with professionals in both academia and industry to gain insights and information relevant to my career aspirations.</em></p></td>
+		<p><em>While I recognize the possibility that I may eventually need to seek a job in industry, my passion for academic research leads me to prioritize this path for now. Therefore, I am not actively seeking industrial positions at this moment and probably not until 2027. Nonetheless, I remain open to discussions with professionals in both academia and industry to gain insights and information relevant to my career aspirations.</em></p></td>
 	</tr>
 
 	<tr>
