--- a/index.html
+++ b/index.html
@@ -27,9 +27,7 @@ body,td,th {
   <p><span style="text-indent: 40px">Expected graduation: TBA (2026-2028)&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
   
 </div>
-		<p><font>[Note] </font></p>
-		<p><em>I am currently enjoying my research projects and am hopeful about my long-term pursuit in academia. However, I am fully aware of the extremely competitive environment in the academic job market and the uncertainties regarding my opportunities post-graduation. As such, I anticipate extending my graduation timeline to continue my long-term research projects and enhance my publication record, thereby giving myself a non-negligible chance of obtaining a faculty or postdoc position.</em></p>
-		<p><em>While I recognize the possibility that I may eventually need to seek a job in industry, my passion for academic research leads me to prioritize this path for now. Therefore, I am not actively seeking industrial positions at this moment and probably not until 2027. Nonetheless, I remain open to discussions with professionals in both academia and industry to gain insights and information relevant to my career aspirations.</em></p></td>
+	<p>&nbsp;</p></td>
 	</tr>
 
 	<tr>
@@ -40,6 +38,8 @@ body,td,th {
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou. </p>
         <p align="left" style="text-indent: 40px">I am&nbsp; currently visiting MIT and working with David Simchi-Levi from Fall 2023 to Summer 2024.</p>
         <p align="left" style="text-indent: 40px">Office: E18 440F&nbsp;	  </p>
+        <p>&nbsp;</p>
+        <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p style="text-indent: 40px">&nbsp;</p></td>
 		<td width="31%" colspan="2" valign="top">
 		<!-- MSCellType="NavBody" -->
@@ -50,8 +50,9 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">Particularly, I have a special interest in mechanism design for blockchain and decentralized AI, and my recent research focus is on the design of <strong>incentive-secure decentralized trustworthy AI</strong> platforms for the initiative of <strong>AI safety</strong>. </p>
 		<p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p>
 		<p align="left" style="text-indent: 40px">During the visit at MIT, I am working on data-driven
-		  mechanism design based on statistical/online learning.  </p>
-	  <p align="left" class="aaa" style="text-indent: 40px">&nbsp;</p>	  </tr>
+		  mechanism design based on statistical/online learning.	  </p>
+		<p><font size="-1"><em>Note: I am currently enjoying my research projects and am hopeful about my long-term pursuit in academia. However, I am fully aware of the extremely competitive environment in the academic job market and the uncertainties regarding my opportunities post-graduation. As such, I anticipate extending my graduation timeline to continue my research projects and enhance my publication record, thereby giving myself a non-negligible chance of obtaining a faculty or postdoc position.</em></font></p>
+      <p><font size="-1"><em>While I recognize the possibility that I may eventually need to seek a job in industry, my passion for academic research leads me to prioritize this path for now. Therefore, I am not actively seeking industrial positions at this moment. Nonetheless, I remain open to discussions with professionals in both academia and industry to gain insights and information relevant to my career aspirations.</em></font></p>      </tr>
 	<tr>
 	  <td valign="top" width="33%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
