--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Research Interest</strong></font></i> </p>
 		<p align="left" style="text-indent: 40px">
-  <font >I currently do research on <font color="#0000FF"> Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) Operations Research, EconCS and Security. </p>
-		<p align="left" style="text-indent: 40px">Particularly, I have a special interest in mechanism design for blockchain and decentralized AI, and my recent research focus is on the design of <strong>incentive-secure decentralized trustworthy AI</strong> platforms for the initiative of <strong>AI safety</strong>. </p>
+  <font >I currently do research on <font color="#0000FF"> Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) Operations Research, EconCS and (Cyber-)Security. </p>
+		<p align="left" style="text-indent: 40px">Particularly, I have a special interest in mechanism design for blockchain and decentralized AI, and my recent research focus is on the design of <strong>incentive-secure decentralized trustworthy AI</strong> platforms, for a general scope of  reliability and social  sustainability in  AI and economic platforms, including (particularly) the current concern and initiative of <strong> AI safety</strong> for the upcoming AGI era.</p>
 		<p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p>
 		<p align="left" style="text-indent: 40px">During the visit at MIT, I am working on data-driven
 		  mechanism design based on statistical/online learning.	  </p>
@@ -67,6 +67,8 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Publications and Preprints</strong></font></i></p>
 	<p align="left" style="text-indent: 40px"><strong><font>Proof-of-Learning with Incentive Security</font></strong><font color="#8080FF">  <font ><a href="https://arxiv.org/abs/2404.09005"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
 	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou</p>
+	<p align="left" style="text-indent: 40px">EC Workshop on Foundation Models and Game Theory, 2024.</p>
+	<p align="left" style="text-indent: 40px">INFORMS Conference on Security (IConS'24)</p>
 	<p align="left" style="text-indent: 40px">In submission (2024).&nbsp;</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 <p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
