--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@ body,td,th {
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
-	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, majoring in Operations Research, advised by Professor Yuan Zhou. </p>
-        <p align="left" style="text-indent: 40px">I am&nbsp; currently visiting MIT and working with David Simchi-Levi from Fall 2023 to Summer 2024.</p>
+	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
+        <p align="left" style="text-indent: 40px">I am currently visiting MIT and working with David Simchi-Levi from Fall 2023 to Summer 2024.</p>
         <p align="left" style="text-indent: 40px">Office: E18 440F&nbsp;	  </p>
         <p>&nbsp;</p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -89,12 +89,11 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><font ><font >ICCV 2019</font><font color="#0000C0"> </font></font><font ><a href="https://link.springer.com/article/10.1007/s41095-020-0195-3"></a></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><em><font color="#0000FF" face="Consolas"><strong>Working Projects</strong></font></em>	</p>
-	<p align="left" style="text-indent: 40px"><strong>Incentive-Aware Dynamic Auction for Budgeted Bidders</strong></p>
-<p align="left" style="text-indent: 40px">David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou*</p>
-<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><strong>(Peer Prediction for) Decentralized Verification Game</strong></p>
-	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
-<p align="left" style="text-indent: 40px">&nbsp;</p></td>
+    <p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
+    <p align="left" style="text-indent: 40px">&nbsp;</p>
+	<p align="left" style="text-indent: 40px"><strong>Incentive-Aware Dynamic Auction for Budgeted Bidders</strong></p>
+<p align="left" style="text-indent: 40px">David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou*</p></td>
 	</tr>
 	<tr>
 		<td height="737" colspan="2" valign="top">
