--- a/index.html
+++ b/index.html
@@ -37,8 +37,6 @@ body,td,th {
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
         <p align="left" style="text-indent: 40px">I am currently visiting MIT and working with David Simchi-Levi from Fall 2023 to Summer 2024.</p>
-        <p align="left" style="text-indent: 40px">Office: E18 440F&nbsp;	  </p>
-        <p>&nbsp;</p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p style="text-indent: 40px">&nbsp;</p></td>
 		<td width="31%" colspan="2" valign="top">
@@ -46,10 +44,12 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Research Statement</strong></font></i> </p>
 		<p align="left" style="text-indent: 40px">
-  <font >I currently do research on <font color="#0000FF"> Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) Operations Research, EconCS and (Cyber-)Security. </p>
-		<p align="left" style="text-indent: 40px">Particularly, I have a special interest in mechanism design for blockchain and decentralized AI, and my recent research focus is on the design of <strong>incentive-secure decentralized trustworthy AI</strong> platforms, for a general scope of  reliability and social  sustainability in  AI and economic platforms, including (particularly) the current concern and initiative of <strong> AI safety</strong> for the upcoming AGI era.</p>
-		<p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font>	  </p>
-	  <p align="left" style="text-indent: 40px">While I am currently enjoying my research projects and am optimistic in the long-term value of the innovations in my research topics, I am aware of the intense competitions of the academic job market and recognize that I would need to enhance my publication records with more fruitful and solid research works before attempting to obtain a faculty or postdoc position. Therefore, I anticipate extending my graduation timeline based on my research progress, allowing me to focus on my research with a calm and dedicated mindset, ultimately preparing me for future post-graduation opportunities.</p></tr>
+  I currently do research on <font color="#0000FF"> Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) Operations Research, EconCS and (Cyber-)Security. </p>
+		<p align="left" style="text-indent: 40px"> I have a special interest in mechanism design for blockchain and decentralized AI, and my recent research focus is on the design of <strong>incentive-secure decentralized trustworthy AI</strong> platforms, for a general scope of  reliability and social  sustainability in  AI and economic platforms, including (particularly) the current concern and initiative of <strong> AI safety</strong> for the upcoming AGI era. Particularly, I am actively looking into the following questions:</p>
+		<font color="#0000B0"><p align="left" style="padding-left: 3em; padding-right:3em"><em>How to incentivize selfish blockchain users to behave honestly, even if they may potentially collude with each other?</em></p>
+		<p align="left" style="padding-left: 3em; padding-right:3em"><em>Is it possible to utilize the blockchain platform to ensure the credibility of AI models, assuming all or majority of agents are economically rational?</em></p>
+		<p align="left" style="padding-left: 3em; padding-right:3em"><em>In particular, while traditional blockchain protocols are computationally redundant, could we possibly develop a theoretically reliable on-chain AI platform with minimal overheads?</em></p></font>
+	  <p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p></tr>
 	<tr>
 	  <td valign="top" width="33%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
