--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ body,td,th {
 		<p align="left" style="text-indent: 40px"> I have a special interest in mechanism design for blockchain and decentralized AI, and my recent research focus is on the design of <strong>incentive-secure decentralized trustworthy AI</strong> platforms, for a general scope of  reliability and social  sustainability in  AI and economic platforms, including (particularly) the current concern and initiative of <strong> AI safety</strong> for the upcoming AGI era. Particularly, I am actively looking into the following questions:</p>
 		<font color="#0000B0"><p align="left" style="padding-left: 3em; padding-right:3em"><em>How to incentivize selfish blockchain users to behave honestly, even if they may potentially collude with each other?</em></p>
 		<p align="left" style="padding-left: 3em; padding-right:3em"><em>Is it possible to utilize the blockchain platform to ensure the credibility of AI models, assuming all or majority of agents are economically rational?</em></p>
-		<p align="left" style="padding-left: 3em; padding-right:3em"><em>In particular, while traditional blockchain protocols are computationally redundant, could we possibly develop a theoretically reliable on-chain AI platform with minimal overheads?</em></p></font>
+		<p align="left" style="padding-left: 3em; padding-right:3em"><em>In particular, while traditional blockchain protocols are computationally redundant, could we possibly develop a theoretically reliable decentralized AI platform with minimal overheads?</em></p></font>
 	  <p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p></tr>
 	<tr>
 	  <td valign="top" width="33%"><p>&nbsp;</p>
@@ -118,7 +118,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2024-08-01</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2024-08-12</font></i></p>
 
 </body>
 
