--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@ body,td,th {
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
         <p align="left" style="text-indent: 40px">I am currently visiting MIT and working with David Simchi-Levi from Fall 2023 to Summer 2024.</p>
+        <p align="left" style="text-indent: 40px">My life philosophy is <em><font color="#2020FF">Andante Cantabile</font></em>.</p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p style="text-indent: 40px">&nbsp;</p></td>
 		<td width="31%" colspan="2" valign="top">
@@ -54,26 +55,29 @@ body,td,th {
 	  <td valign="top" width="33%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
 
-	    <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu (expires in &gt;2026/06) </font></p>
-	    <p align="left" style="text-indent: 40px">wiku30 [at] mit.edu (expires in 2024/08)</p>
-        <p align="left" style="text-indent: 40px"> <font ><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font >(permanent)</font></p>
+	    <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu (expires in &gt;2026/06) </font>        </p>
+	    <p align="left" style="text-indent: 40px"> <font ><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font >(permanent)</font></p>
         <p align="left" style="text-indent: 40px"><font color="#8080FF" ><a href="https://www.facebook.com/zishuo.zhao.528"></a></font></p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><font >ORCID: <font color="#8080FF"><a href="https://orcid.org/0000-0003-4247-7272"><font color=#0000D0>0000-0003-4247-7272</font></a></font></font></p>      </td>
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Publications and Preprints</strong></font></i></p>
+	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Research</strong></font></i></p>
 	<p align="left" style="text-indent: 40px"><strong><font>Proof-of-Learning with Incentive Security</font></strong><font color="#8080FF">  <font ><a href="https://arxiv.org/abs/2404.09005"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
 	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou</p>
 	<p align="left" style="text-indent: 40px">EC Workshop on Foundation Models and Game Theory, 2024.</p>
 	<p align="left" style="text-indent: 40px">INFORMS Conference on Security (IConS'24)</p>
-	<p align="left" style="text-indent: 40px">In submission (2024).&nbsp;</p>
+	<p align="left" style="text-indent: 40px">In submission (2024)</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><strong>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation</strong></p>
+	<p align="left" style="text-indent: 40px"><strong>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation </strong><font color="#8080FF"><font ><a href="https://arxiv.org/abs/2209.13099"><font color="#8080FF">[Link]</font></a></font></font></p>
     <p align="left" style="text-indent: 40px"> Xi Chen*, David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
-    <p align="left" style="text-indent: 40px">Major Revision in <font color="#0000FF">Operations Research</font></p>
+    <p align="left" style="text-indent: 40px">Major Revision in <font color="#0000FF">Operations Research</font> (2024)</p>
     <p align="left" style="text-indent: 40px"><font color="#0000FF">Best Paper Award, </font><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font></p>
     <p align="left" style="text-indent: 40px"> <font >CESC 2022</font></p>
+    <p align="left" style="text-indent: 40px">&nbsp;</p>
+    <p align="left" style="text-indent: 40px"><strong>It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma</strong> <font color="#8080FF"><font ><a href="https://arxiv.org/abs/2406.01794"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
+    <p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
+    <p align="left" style="text-indent: 40px">Working Paper (2024)</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 <p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
@@ -88,12 +92,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><font > <font >CVMJ 2021</font></font></p>
 	<p align="left" style="text-indent: 40px"><font ><font >ICCV 2019</font><font color="#0000C0"> </font></font><font ><a href="https://link.springer.com/article/10.1007/s41095-020-0195-3"></a></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><em><font color="#0000FF" face="Consolas"><strong>Working Projects</strong></font></em>	</p>
-	<p align="left" style="text-indent: 40px"><strong>(Peer Prediction for) Decentralized Verification Game</strong></p>
-    <p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
-    <p align="left" style="text-indent: 40px">&nbsp;</p>
-	<p align="left" style="text-indent: 40px"><strong>Incentive-Aware Dynamic Auction for Budgeted Bidders</strong></p>
-<p align="left" style="text-indent: 40px">David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou*</p></td>
+	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
 		<td height="737" colspan="2" valign="top">
@@ -114,6 +113,7 @@ body,td,th {
 		  <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Extracurricular Life </font></i></p>
 		<p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="#0000FF">Photography</font>, <font color="0000ff">Singing</font> and <font color="0000ff">Writing</font> as my main hobbies, and have developed new interests in <font color="8080ff">Orienteering</font> and <font color="8080ff">Sketching</font> during college years.</font></p>
 		<p align="left" style="text-indent: 40px">Particularly, I wrote <a href="2022/morning_star.html"> <font color="#8080FF">a recap of  2022</font></a> in Classical Chinese.</p>
+		<p align="left" style="text-indent: 40px">I play some video games with the game ID <em><font color="8080ff">Ai no Hime</font></em>, which simultaneously refers to the advancement of artificial intelligence and my wish for an affectionate lifestyle.</p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 </table>
