--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ body,td,th {
 	  <td valign="top" width="33%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
 
-	    <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu (expires in &gt;2026/06) </font>        </p>
-	    <p align="left" style="text-indent: 40px"> <font ><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font> <font >(permanent)</font></p>
-        <p align="left" style="text-indent: 40px"><font color="#8080FF" ><a href="https://www.facebook.com/zishuo.zhao.528"></a></font></p>
+	    <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu</font>        </p>
+	    <p align="left" style="text-indent: 40px"> <font ><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font></p>
+	    <p align="left" style="text-indent: 40px"><s>Ai no Hime (Steam)</s></p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p align="left" style="text-indent: 40px"><font >ORCID: <font color="#8080FF"><a href="https://orcid.org/0000-0003-4247-7272"><font color=#0000D0>0000-0003-4247-7272</font></a></font></font></p>      </td>
 	  <td colspan="2" valign="top">
@@ -95,7 +95,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
-		<td height="737" colspan="2" valign="top">
+		<td height="486" colspan="2" valign="top">
 <p align="left" style="text-indent: 40px">&nbsp;</p>
 
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competitions Attended</font></i>
@@ -118,7 +118,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2024-08-12</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2024-08-16</font></i></p>
 
 </body>
 
