--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
-        <p align="left" style="text-indent: 40px">I am currently visiting MIT and working with David Simchi-Levi from Fall 2023 to Summer 2024.</p>
+        <p align="left" style="text-indent: 40px"> From Fall 2023 to Summer 2024, I visited MIT under the supervision of David Simchi-Levi.</p>
         <p align="left" style="text-indent: 40px">My life philosophy is <em><font color="#2020FF">Andante Cantabile</font></em>.</p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
       <p style="text-indent: 40px">&nbsp;</p></td>
@@ -118,7 +118,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2024-08-16</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2024-09-20</font></i></p>
 
 </body>
 
