--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><font ><strong>ClusterSLAM: A SLAM Backend for Simultaneous Rigid Body Clustering and Motion Estimation</strong></font><font color="#8080FF"> </font><font ><a href="https://link.springer.com/article/10.1007/s41095-020-0195-3"><font color="#8080FF">[Link] </font></a></font></p>
 	<p align="left" style="text-indent: 40px"><font >Jiahui Huang, Sheng Yang, <u>Zishuo Zhao</u>, Yukun Lai, Shi-Min Hu. </font></p>
 	<p align="left" style="text-indent: 40px"><font > <font >CVMJ 2021</font></font></p>
-	<p align="left" style="text-indent: 40px"><font ><font >ICCV 2019</font><font color="#0000C0"> </font></font><font ><a href="https://link.springer.com/article/10.1007/s41095-020-0195-3"></a></font></p>
+	<p align="left" style="text-indent: 40px"><font ><font >ICCV 2019</font> </font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
+	<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Tentative Projects</font></i></p>
+	<p align="left" style="text-indent: 40px"><strong>Online Peer Prediction</strong></p>
+	<p align="left" style="text-indent: 40px">with David Simchi-Levi, Qiushi Han and Renfei Tan</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
 	<tr>
