--- a/index.html
+++ b/index.html
@@ -60,7 +60,11 @@ body,td,th {
 	    <p align="left" style="text-indent: 40px"> <font ><a href="http://www.github.com/wiku30"> <font color="#8080FF">https://www.github.com/wiku30</font></a></font></p>
 	    <p align="left" style="text-indent: 40px"><s>Ai no Hime (Steam)</s></p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
-      <p align="left" style="text-indent: 40px"><font >ORCID: <font color="#8080FF"><a href="https://orcid.org/0000-0003-4247-7272"><font color=#0000D0>0000-0003-4247-7272</font></a></font></font></p>      </td>
+      <p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Advising</strong></font></i></p>
+      <p align="left" style="text-indent: 40px">• Haibo Xiao (Undergraduate at Tsinghua University)</p>
+      <p align="left" style="text-indent: 40px">• Hongxu Su (PhD student at HKUST(GZ) )</p>
+      <p align="left" style="text-indent: 40px">• Qiushi Han (Undergraduate at UIUC, visiting MIT)</p>
+      <p align="left" style="text-indent: 40px">• Renfei Tan (PhD student at MIT)</p></td>
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Research</strong></font></i></p>
@@ -94,7 +98,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px"><font ><font >ICCV 2019</font> </font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Tentative Projects</font></i></p>
-	<p align="left" style="text-indent: 40px"><strong>Online Peer Prediction</strong></p>
+	<p align="left" style="text-indent: 40px"><strong>Online Peer Prediction (For LLM Alignment)</strong></p>
 	<p align="left" style="text-indent: 40px">with David Simchi-Levi, Qiushi Han and Renfei Tan</p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p></td>
 	</tr>
