--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ body,td,th {
   I currently do research on <font color="#0000FF"> Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) Operations Research, EconCS and (Cyber-)Security. </p>
 		<p align="left" style="text-indent: 40px"> I have a special interest in mechanism design for blockchain and decentralized AI, and my recent research focus is on the design and theoretical boundaries of <strong>incentive-secure decentralized trustworthy AI</strong> platforms, for a general scope of  reliability and social  sustainability in  AI and digital economy, including (particularly) the current concern and initiative of <strong> AI safety</strong> for the upcoming AGI era. Particularly, I am actively looking into the following questions:</p>
 		<font color="#0000B0"><p align="left" style="padding-left: 3em; padding-right:3em"><em>How to incentivize selfish blockchain users to behave honestly, even if they may potentially collude with each other?</em></p>
-		<p align="left" style="padding-left: 3em; padding-right:3em"><em>Is it possible to utilize the blockchain platform to ensure the credibility of AI models, assuming all or majority of agents are economically rational?</em></p>
+		<p align="left" style="padding-left: 3em; padding-right:3em"><em>Is it possible to utilize the blockchain (or other decentralized) platforms to ensure the credibility of AI models, assuming all or majority of agents are economically rational?</em></p>
 		<p align="left" style="padding-left: 3em; padding-right:3em"><em>In particular, while traditional blockchain protocols are computationally redundant, could we possibly develop a theoretically reliable decentralized AI platform with minimal overheads?</em></p></font>
 	  <p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p></tr>
 	<tr>
@@ -82,7 +82,7 @@ body,td,th {
     <p align="left" style="text-indent: 40px">&nbsp;</p>
     <p align="left" style="text-indent: 40px"><strong>It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma</strong> <font color="#8080FF"><font ><a href="https://arxiv.org/abs/2406.01794"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
     <p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
-    <p align="left" style="text-indent: 40px">Working Paper (2024)</p>
+    <p align="left" style="text-indent: 40px">Working Paper (2024). <em>Substantially improved results are available compared to the Arxiv version.</em></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 <p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
@@ -107,14 +107,14 @@ body,td,th {
 <p align="left" style="text-indent: 40px">&nbsp;</p>
 
 		<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas">Competitions Attended</font></i>
-		  <p align="left" style="text-indent: 40px"><font ><font color="#0000D0"><a href="https://thuctf2020.redbud.info/scoreboard">THUCTF2020</a></font></font>, <font >12th place </font>
+		  <p align="left" style="text-indent: 40px"><font ><font color="#0000D0"><a>THUCTF2020</a></font></font>, <font >12th place </font>
 		    <font color="#000000" ><a href="ctf/CTF_writeup.pdf"><font color="8080FF">[Writeup]</font></a></font>
 		  <p align="left" style="text-indent: 40px"><font >2020/09 - 2020/10 </font>
 		  <p align="left" style="text-indent: 40px"><font ><font color="#0000D0">The 24th Artificial Inteligence Programming Contest</font> of Tsinghua University</font>, <font >12th place </font>
 		
 		<p align="left" style="text-indent: 40px"><font >2020/03 - 2020/05</font></p>
 		<p align="left" style="text-indent: 40px">
-<font ><a href="https://ai.net9.org/games/dorado/articles"><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font >15th place </font></p>
+<font ><a><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font >15th place </font></p>
 	  <p align="left" style="text-indent: 40px"><font >2016/03 - 2016/05</font></p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 		<td  valign="top" width="31%"><p>&nbsp;</p>
