--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ body,td,th {
     <p align="left" style="text-indent: 40px">&nbsp;</p>
     <p align="left" style="text-indent: 40px"><strong>It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma</strong> <font color="#8080FF"><font ><a href="https://arxiv.org/abs/2406.01794"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
     <p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
-    <p align="left" style="text-indent: 40px">Working Paper (2024). <em>Substantially improved results are available compared to the Arxiv version.</em></p>
+    <p align="left" style="text-indent: 40px">Working Paper (2024). <em>Substantially improved results are available compared to the Arxiv version.</em> <a href="https://wiku30.xyz/2024/VeriPP/draft.pdf">[Draft]</a></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 <p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
