--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body,td,th {
 <div align="center">
   <p><font color="#8080FF" >PhD Candidate, Industrial Engineering, University of Illinois Urbana-Champaign
   </font></p>
-  <p><span style="text-indent: 40px">Expected graduation: TBA (2026-2028)&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
+  <p><span style="text-indent: 40px">Expected graduation: TBA (2026-2027)&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
   
 </div>
 	<p>&nbsp;</p></td>
@@ -38,12 +38,10 @@ body,td,th {
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fourth-year PhD student in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
         <p align="left" style="text-indent: 40px"> From Fall 2023 to Summer 2024, I visited MIT under the supervision of David Simchi-Levi.</p>
         <p align="left" style="text-indent: 40px">My life philosophy is <em><font color="#2020FF">Andante Cantabile</font></em>.</p>
-        <p align="left" style="text-indent: 40px">While I would like to pursue for a faculty or postdoc position in academia, with the awareness of the currently intense competition on the academic job market, I would anticipate to extend my PhD timeline for a more solid research profile. I anticipate to graduate between 2026 and 2028, depending on my research progress.</p>
+        <p align="left" style="text-indent: 40px">While I would like to pursue for a faculty or postdoc position in academia, with the awareness of the currently intense competition on the academic job market, I would anticipate to extend my PhD timeline for a more solid research profile. I anticipate to graduate between 2026 and 2027, depending on my research progress.</p>
         <p align="left" style="text-indent: 40px">&nbsp;</p>
         <p align="left" style="text-indent: 40px"><strong>NEWS</strong>: I will give a presentation at the <strong>INFORMS Annual Meeting 2024</strong> in the section of:</p>
-        <p align="left" style="text-indent: 40px">Advancements in Statistical Models and AI, Regency 606, Oct 22, 2:15PM-3:30PM</p>
-        <p align="left" style="text-indent: 40px">&nbsp;</p>
-      <p style="text-indent: 40px">&nbsp;</p></td>
+      <p align="left" style="text-indent: 40px">Advancements in Statistical Models and AI, Regency 606, Oct 22, 2:15PM-3:30PM      </p></td>
 		<td width="31%" colspan="2" valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
