--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body,td,th {
 	</tr>
 
 	<tr>
-		<td width="33%"  valign="top">
+		<td width="40%"  valign="top">
 		<!-- MSCellType="ContentBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
@@ -40,7 +40,7 @@ body,td,th {
         <p align="left" style="text-indent: 40px">My life philosophy is <em><font color="#2020FF">Andante Cantabile</font></em>.</p>
         <p align="left" style="text-indent: 40px">While I would like to pursue for a faculty or postdoc position in academia, with the awareness of the currently intense competition on the academic job market, I would anticipate to extend my PhD timeline for a more solid research profile. I anticipate to graduate between 2026 and 2027, depending on my research progress.</p>
       <p align="left" style="text-indent: 40px">&nbsp;</p></td>
-		<td width="31%" colspan="2" valign="top">
+		<td colspan="2" valign="top">
 		<!-- MSCellType="NavBody" -->
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Research Statement</strong></font></i> </p>
@@ -52,7 +52,7 @@ body,td,th {
 		<p align="left" style="padding-left: 3em; padding-right:3em"><em>In particular, while traditional blockchain protocols are computationally redundant, could we possibly develop a theoretically reliable decentralized AI platform with minimal overheads?</em></p></font>
 	  <p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p></tr>
 	<tr>
-	  <td valign="top" width="33%"><p>&nbsp;</p>
+	  <td valign="top" width="40%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
 
 	    <p align="left" style="text-indent: 40px"><font >zishuoz2 [at] illinois.edu</font>        </p>
@@ -116,16 +116,16 @@ body,td,th {
 <font ><a><font color="#0000D0">The 20th Artificial Inteligence Programming Contest</font></a> of Tsinghua University</font>, <font >15th place </font></p>
 	  <p align="left" style="text-indent: 40px"><font >2016/03 - 2016/05</font></p>
 	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
-		<td  valign="top" width="31%"><p>&nbsp;</p>
+		<td  valign="top" width="41%"><p>&nbsp;</p>
 		  <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF">Extracurricular Life </font></i></p>
-		<p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font color="#0000FF">Photography</font>, <font color="0000ff">Singing</font> and <font color="0000ff">Writing</font> as my main hobbies, and have developed new interests in <font color="8080ff">Orienteering</font> and <font color="8080ff">Sketching</font> during college years.</font></p>
-		<p align="left" style="text-indent: 40px">Particularly, I wrote <a href="2022/morning_star.html"> <font color="#8080FF">a recap of  2022</font></a> in Classical Chinese.</p>
-		<p align="left" style="text-indent: 40px">I play some video games with the game ID <em><font color="8080ff">Ai no Hime</font></em>, which simultaneously refers to the advancement of artificial intelligence and my wish for an affectionate lifestyle.</p>
-	  <p align="left" style="text-indent: 40px">&nbsp;</p></td>
+		<p align="left" style="text-indent: 40px"><font >Beside math and computer sciences, I am also interested in music and visual arts since my childhood, and was good at writing essays &amp; poems during high school times. I still maintain <font><em>photography</em></font>, <font color="0000ff"><em>singing</em></font> and <font color="0000ff"><em>writing</em></font> as my main hobbies, and have developed new interests in <font color="8080ff"><em>orienteering</em></font>, <font color="8080ff"><em>gardening</em> and <em>sketching</em></font> during college years.</font></p>
+		<p align="left" style="text-indent: 40px">I have been growing a very lovely Chlorophytum comosum (spider plant) since Fall 2021 when I came to UIUC. The plant is named <em>The Cryptbloom</em>,	which simultaneously refers to my passion for research on blockchain &amp; Web3, my favorite <em>League of Legends</em> item, and a (zero-knowledge) lovely story related to the plant. A few plantlets named as <em>Cryptbloom Minors</em> have been grown separately, among which some are now being grown by a friend of mine.</p>
+		<p align="center"><img src="album/cryptbloom/240907.jpg" width="90%" alt=""/></p>
+	  <p align="center" ><font color="#8080FF"><font ><a href="album/cryptbloom/index.html"><font color="#8080FF">[Photo Album]</font></a></font></font></p></td>
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2024-09-20</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2024-11-21</font></i></p>
 
 </body>
 
