--- a/album/cryptbloom/index.html
+++ b/album/cryptbloom/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Language" content="zh-cn">
 <meta charset = "utf-8">
-<title>Template --- wiku30's Blog</title>
+<title>Album of Cryptbloom</title>
 </head>
 
 <body bgcolor="lavender">
