--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ body,td,th {
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><strong>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation </strong><font color="#8080FF"><font ><a href="https://arxiv.org/abs/2209.13099"><font color="#8080FF">[Link]</font></a></font></font></p>
     <p align="left" style="text-indent: 40px"> Xi Chen*, David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
-    <p align="left" style="text-indent: 40px">Major Revision in <font color="#0000FF">Operations Research</font> (2024)</p>
+    <p align="left" style="text-indent: 40px"><font color="#0000FF">Operations Research</font></p>
     <p align="left" style="text-indent: 40px"><font color="#0000FF">Best Paper Award, </font><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font></p>
     <p align="left" style="text-indent: 40px"> <font >CESC 2022</font></p>
     <p align="left" style="text-indent: 40px">&nbsp;</p>
