--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ body,td,th {
 		<font color="#0000B0"><p align="left" style="padding-left: 3em; padding-right:3em"><em>How to incentivize selfish blockchain users to behave honestly, even if they may potentially collude with each other?</em></p>
 		<p align="left" style="padding-left: 3em; padding-right:3em"><em>Is it possible to utilize the blockchain (or other decentralized) platforms to ensure the credibility of AI models, assuming all or majority of agents are economically rational?</em></p>
 		<p align="left" style="padding-left: 3em; padding-right:3em"><em>In particular, while traditional blockchain protocols are computationally redundant, could we possibly develop a theoretically reliable decentralized AI platform with minimal overheads?</em></p></font>
-	  <p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>.</font></p></tr>
+	  <p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>, </font>and published at the top-tier journal <font color="#0000FF"><em>Operations Research</em></font> in the field of OR/OM.</p></tr>
 	<tr>
 	  <td valign="top" width="40%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
