--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ body,td,th {
 <div align="center">
   <p><font color="#8080FF" >PhD Candidate, Industrial Engineering, University of Illinois Urbana-Champaign
   </font></p>
-  <p><span style="text-indent: 40px">Expected graduation: TBA (2026-2027)&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
+  <p><span style="text-indent: 40px">Expected graduation: TBA (~2026)&nbsp; <font ><a href="CV/ZishuoZhao-CV.pdf"><font color="8080FF">[CV]</font></a></font> &nbsp;</span></p>
   
 </div>
 	<p>&nbsp;</p></td>
@@ -36,8 +36,7 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><font>Welcome to my homepage! </font></p>
 	    <p align="left" style="text-indent: 40px">I am Zishuo Zhao, a&nbsp;fifth-year PhD student in the Department of ISE, UIUC, advised by Professor Yuan Zhou. Before the PhD program, I received my bachelor's degree from <a href="https://iiis.tsinghua.edu.cn/en/"><font color="#2020FF">Yao Class</font></a> at IIIS, Tsinghua University.</p>
-        <p align="left" style="text-indent: 40px"> From Fall 2023 to Summer 2024, I visited MIT under the supervision of David Simchi-Levi.</p>
-        <p align="left" style="text-indent: 40px">My life philosophy is <em><font color="#2020FF">Andante Cantabile</font></em>.</p>
+        <p align="left" style="text-indent: 40px"> From Fall 2023 to Summer 2024, I visited MIT under the supervision of David Simchi-Levi.        </p>
         <p align="left" style="text-indent: 40px">While I would like to pursue for a faculty or postdoc position in academia, with the awareness of the currently intense competition on the academic job market, I would anticipate to slightly extend my PhD timeline for a more solid research profile. I anticipate to graduate in 2026, depending on my research progress.</p>
       <p align="left" style="text-indent: 40px">&nbsp;</p></td>
 		<td colspan="2" valign="top">
@@ -45,12 +44,12 @@ body,td,th {
 		<p align="left" style="text-indent: 40px">&nbsp;</p>
 		<p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Research Statement</strong></font></i> </p>
 		<p align="left" style="text-indent: 40px">
-  I currently do research on <font color="#0000FF"> Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) Operations Research, EconCS and (Cyber-)Security. </p>
+  I currently do research on <font color="#0000FF"> Mechanism Design</font>, and my research interest spans  the fields in (the intersection of) Operations Research, EconCS and Trustworthy AI. </p>
 		<p align="left" style="text-indent: 40px"> I have a special interest in mechanism design for blockchain and decentralized AI, and my recent research focus is on the design and theoretical boundaries of <strong>incentive-secure decentralized trustworthy AI</strong> platforms, for a general scope of  reliability and social  sustainability in  AI and digital economy, including (particularly) the current concern and initiative of <strong> AI safety</strong> for the upcoming AGI era. Particularly, I am actively looking into the following questions:</p>
 		<font color="#0000B0"><p align="left" style="padding-left: 3em; padding-right:3em"><em>How to incentivize selfish blockchain users to behave honestly, even if they may potentially collude with each other?</em></p>
 		<p align="left" style="padding-left: 3em; padding-right:3em"><em>Is it possible to utilize the blockchain (or other decentralized) platforms to ensure the credibility of AI models, assuming all or majority of agents are economically rational?</em></p>
 		<p align="left" style="padding-left: 3em; padding-right:3em"><em>In particular, while traditional blockchain protocols are computationally redundant, could we possibly develop a theoretically reliable decentralized AI platform with minimal overheads?</em></p></font>
-	  <p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em>, </font>and published at the top-tier journal <font color="#0000FF"><em>Operations Research</em></font> in the field of OR/OM.</p></tr>
+	  <p align="left" style="text-indent: 40px">My research has won <font color="#0000FF">Best Paper Award</font> at <font><em>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3</em> on which several famous blockchain projects as Bittensor and Flock are presented, </font>and published at the top-tier journal <font color="#0000FF"><em>Operations Research</em></font> in the field of OR/OM.</p></tr>
 	<tr>
 	  <td valign="top" width="40%"><p>&nbsp;</p>
 	    <p align="left" style="text-indent: 40px"><i><font face="Consolas" color="#0000FF"><strong>Contacts</strong></font></i></p>
@@ -67,21 +66,21 @@ body,td,th {
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Research</strong></font></i></p>
-	<p align="left" style="text-indent: 40px"><strong><font>Proof-of-Learning with Incentive Security</font></strong><font color="#8080FF">  <font ><a href="https://arxiv.org/abs/2404.09005"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
-	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou</p>
-	<p align="left" style="text-indent: 40px">EC Workshop on Foundation Models and Game Theory, 2024.</p>
-	<p align="left" style="text-indent: 40px">INFORMS Conference on Security (IConS'24)</p>
-	<p align="left" style="text-indent: 40px">In submission (2024)</p>
-	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><strong>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation </strong><font color="#8080FF"><font ><a href="https://arxiv.org/abs/2209.13099"><font color="#8080FF">[Link]</font></a></font></font></p>
     <p align="left" style="text-indent: 40px"> Xi Chen*, David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
     <p align="left" style="text-indent: 40px"><font color="#0000FF">Operations Research</font> (2025, forthcoming)</p>
     <p align="left" style="text-indent: 40px"><font color="#0000FF">Best Paper Award, </font><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font></p>
     <p align="left" style="text-indent: 40px"> <font >CESC 2022</font></p>
     <p align="left" style="text-indent: 40px">&nbsp;</p>
-    <p align="left" style="text-indent: 40px"><strong>It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma</strong> <font color="#8080FF"><font ><a href="https://arxiv.org/abs/2406.01794"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
+	<p align="left" style="text-indent: 40px"><strong><font>Proof-of-Learning with Incentive Security</font></strong><font color="#8080FF">  <font ><a href="https://arxiv.org/abs/2404.09005"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
+	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou</p>
+	<p align="left" style="text-indent: 40px">EC Workshop on Foundation Models and Game Theory, 2024.</p>
+	<p align="left" style="text-indent: 40px">INFORMS Conference on Security (IConS'24)</p>
+	<p align="left" style="text-indent: 40px">In submission (2025)</p>
+	<p align="left" style="text-indent: 40px">&nbsp;</p>
+	<p align="left" style="text-indent: 40px"><strong>It Takes Two: A Peer-Prediction Solution for Blockchain Verifier's Dilemma</strong> <font color="#8080FF"><font ><a href="https://arxiv.org/abs/2406.01794"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
     <p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Xi Chen, Yuan Zhou</p>
-    <p align="left" style="text-indent: 40px">Working Paper (2024). <em>Substantially improved results are available compared to the Arxiv version. </em><font color="#8080FF"><font ><a href="2024/VeriPP/VeriPP_informs.pptx"><font color="#8080FF">[Slides]</font></a></font></font></p>
+    <p align="left" style="text-indent: 40px">Working Paper (2025). <em>Substantially improved results are available compared to the Arxiv version. </em><font color="#8080FF"><font ><a href="2024/VeriPP/VeriPP_informs.pptx"><font color="#8080FF">[Slides]</font></a></font></font></p>
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 <p align="left" style="text-indent: 40px"><strong>Personalized Pricing with Group Fairness Constraint</strong></p>
 	<p align="left" style="text-indent: 40px">Xin Chen*, Zexing Xu*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
