--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ body,td,th {
     <p align="left" style="text-indent: 40px"> <font >CESC 2022</font></p>
     <p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><strong><font>Proof-of-Learning with Incentive Security</font></strong><font color="#8080FF">  <font ><a href="https://arxiv.org/abs/2404.09005"><font color="#8080FF">[Arxiv]</font></a></font></font></p>
-	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Zhixuan Fang, Xuechao Wang, Xi Chen, Yuan Zhou</p>
+	<p align="left" style="text-indent: 40px"><u>Zishuo Zhao</u>, Zhixuan Fang, Xuechao Wang, Xi Chen, Hongxu Su, Haibo Xiao, Yuan Zhou</p>
 	<p align="left" style="text-indent: 40px">EC Workshop on Foundation Models and Game Theory, 2024.</p>
 	<p align="left" style="text-indent: 40px">INFORMS Conference on Security (IConS'24)</p>
 	<p align="left" style="text-indent: 40px">In submission (2025)</p>
