--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@ body,td,th {
 	  <td colspan="2" valign="top">
 	<p align="left" style="text-indent: 40px">&nbsp;</p>
 	<p align="left" style="text-indent: 40px"><i><font color="#0000FF" face="Consolas"><strong>Research</strong></font></i></p>
-	<p align="left" style="text-indent: 40px"><strong>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation </strong><font color="#8080FF"><font ><a href="https://arxiv.org/abs/2209.13099"><font color="#8080FF">[Link]</font></a></font></font></p>
+	<p align="left" style="text-indent: 40px"><strong>Bayesian Mechanism Design for Blockchain Transaction Fee Allocation </strong><font color="#8080FF"><font ><a href="https://pubsonline.informs.org/doi/full/10.1287/opre.2024.0865"><font color="#8080FF">[Link]</font></a></font></font></p>
     <p align="left" style="text-indent: 40px"> Xi Chen*, David Simchi-Levi*, <u>Zishuo Zhao</u>*, Yuan Zhou* (alphabetical order)</p>
-    <p align="left" style="text-indent: 40px"><font color="#0000FF">Operations Research</font> (2025, forthcoming)</p>
+    <p align="left" style="text-indent: 40px"><font color="#0000FF">Operations Research</font> (2025)</p>
     <p align="left" style="text-indent: 40px"><font color="#0000FF">Best Paper Award, </font><font>NeurIPS  Workshop on&nbsp;Decentralization and Trustworthy Machine Learning in Web3, 2022</font></p>
     <p align="left" style="text-indent: 40px"> <font >CESC 2022</font></p>
     <p align="left" style="text-indent: 40px">&nbsp;</p>
@@ -124,7 +124,7 @@ body,td,th {
 	</tr>
 </table>
 
-<p align="right"><i><font color="#7070C0" >Last updated on 2024-12-19</font></i></p>
+<p align="right"><i><font color="#7070C0" >Last updated on 2025-02-03</font></i></p>
 
 </body>
 
